--- a/app/infrastructure/frontend/src/main/resources/static/index.html
+++ b/app/infrastructure/frontend/src/main/resources/static/index.html
@@ -9,7 +9,6 @@
   <!-- React and Babel -->
   <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <style>
     body { padding-top: 20px; }
     .table thead th { white-space: nowrap; }
@@ -29,6 +28,10 @@
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-<script type="text/babel" src="index/app.js"></script>
+<!-- App scripts (order matters) -->
+<script src="index/utils.js"></script>
+<script src="index/api.js"></script>
+<script src="index/components.js"></script>
+<script src="index/app.js"></script>
 </body>
 </html>
